welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:9: error: ';' expected but 'if' found.
  } if (Math.min(Math.min(a,b),c)<c-10) {
    ^